feat(server): add MCP tool framework and AI integration.